<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".FriendsImportActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:textSize="20sp"
        android:text="@string/import_friends_from" />

    <Button
        android:id="@+id/button1"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_gray_shadow"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="0dp"
        android:enabled="true"
        android:gravity="center"
        android:onClick="importFriendsByInternalContact"
        android:text="@string/import_by_phone" />

    <Button
        android:id="@+id/button2"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_gray_shadow"
        android:drawableLeft="@drawable/facebook_144"
        android:onClick="importFriendsByFacebook"
        android:text="@string/import_by_facebook" />

    <Button
        android:id="@+id/button3"
        android:background="@drawable/round_gray_shadow"        
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_launcher"        
        android:onClick="importFriendManually"
        android:text="@string/import_manually" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"        
        android:gravity="center"
        android:textColor="#a7a7a7"
        android:text="@string/friend_info_is_private"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>