<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".GroupInviteActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:textSize="20sp"
        android:text="@string/invite_person_from" />

    <Button
        android:id="@+id/button1"
        android:background="@drawable/round_gray_shadow"        
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="0dp"
        android:enabled="true"
        android:gravity="center"
        android:onClick="inviteByInternalContactEmail"
        android:text="@string/invite_contact_by_email" />
    
    <Button
        android:id="@+id/button2"
        android:background="@drawable/round_gray_shadow"        
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="0dp"
        android:enabled="true"
        android:gravity="center"
        android:onClick="inviteByInternalContactSMS"
        android:text="@string/invite_contact_by_sms" />

    <Button
        android:id="@+id/button4"
        android:background="@drawable/round_gray_shadow"        
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_launcher"        
        android:onClick="inviteManually"
        android:text="@string/invite_manually" />

</LinearLayout>
