<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
    android:orientation="vertical" >
        
    <ImageView
        android:id="@+id/friend_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/generic_avatar_image" 
        android:onClick="selectImage" />     

    <EditText
        android:id="@+id/import_friend_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/import_friend_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/import_friend_threshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/thresholds_medium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/import_label" 
        android:onClick="importFriend" />

</LinearLayout>